<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/rd_notify"
            android:icon="@mipmap/ic_mic_grey600"
            android:title="@string/notify_record" />
        <item
            android:id="@+id/rd_action"
            android:icon="@mipmap/ic_videocam_grey600"
            android:title="@string/action_record" />

        <item
            android:id="@+id/rd_all"
            android:icon="@mipmap/ic_dashboard_grey600"
            android:title="@string/all_record" />

        <item
            android:id="@+id/rd_trash"
            android:icon="@mipmap/ic_delete_grey600"
            android:title="@string/trash" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/set"
                android:icon="@mipmap/ic_settings_grey600"
                android:title="@string/setting" />
            <item
                android:id="@+id/about"
                android:icon="@mipmap/ic_info_grey600"
                android:title="@string/about" />
        </menu>
    </item>



</menu>
