<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="true"
    android:background="@color/blue_gray_500"
    android:fitsSystemWindows="true">


    <android.support.design.widget.AppBarLayout
        android:layout_height="100dp"
        android:layout_width="match_parent">
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_scrollFlags="exitUntilCollapsed|scroll">
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                app:layout_collapseMode="pin"
                app:theme="?attr/msToolbarTheme"
                app:popupTheme="?attr/msToolbarThemePopup"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_gravity="top"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center_vertical"
                android:padding="10dp">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/about_title"
                android:textColor="@color/white_text_70"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:text="@string/about_tool"
                android:textColor="@color/white_text_70"
                android:textSize="18sp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/about_have"
                android:textColor="@color/white_text_70"
                android:textSize="18sp"
                android:id="@+id/tv_have" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginLeft="10dp"
                android:text="@string/about_me"
                android:textColor="@color/white_text_70"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/about_mail"
                android:textColor="@color/white_text_70"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginLeft="10dp"
                android:text="@string/about_welcome"
                android:textColor="@color/white_text_70"
                android:textSize="18sp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_version"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="30dp"
                android:text="@string/about_version"
                android:textColor="@color/white_text_70"
                android:textSize="18sp" />



            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"/>





        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>